--- a/MoneyM/Storyboards/NewOperation.storyboard
+++ b/MoneyM/Storyboards/NewOperation.storyboard
@@ -54,7 +54,7 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVh-JJ-aik">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" translatesAutoresizingMaskIntoConstraints="NO" id="EVh-JJ-aik">
                                 <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CSq-7e-QUq">
@@ -127,7 +127,7 @@
                                                             <constraint firstAttribute="height" constant="50" id="diV-a5-vXI"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain" title="Income">
+                                                        <buttonConfiguration key="configuration" style="plain" title="Category">
                                                             <fontDescription key="titleFontDescription" type="system" pointSize="16"/>
                                                         </buttonConfiguration>
                                                         <userDefinedRuntimeAttributes>
@@ -292,11 +292,137 @@
             </objects>
             <point key="canvasLocation" x="21.600000000000001" y="63.418290854572717"/>
         </scene>
+        <!--Category View Controller-->
+        <scene sceneID="UZi-sA-1OO">
+            <objects>
+                <viewController storyboardIdentifier="Category" id="qeF-95-cvL" customClass="CategoryViewController" customModule="MoneyM" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0dc-jt-pyv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar clipsSubviews="YES" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvD-Uz-Dni">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <color key="barTintColor" name="Main Background Color"/>
+                                <items>
+                                    <navigationItem title="Category" id="eGJ-y9-koc">
+                                        <barButtonItem key="rightBarButtonItem" style="plain" id="eOw-Lq-MhS">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="V22-AZ-C4Z">
+                                                <rect key="frame" x="329" y="7" width="30" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" systemColor="systemGray4Color"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                <color key="tintColor" systemColor="systemOrangeColor"/>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal">
+                                                    <imageReference key="image" image="xmark" catalog="system" symbolScale="medium" renderingMode="hierarchical-single">
+                                                        <hierarchicalColors>
+                                                            <color name="Main Background Color"/>
+                                                            <color systemColor="secondaryLabelColor"/>
+                                                            <color systemColor="tertiaryLabelColor"/>
+                                                        </hierarchicalColors>
+                                                    </imageReference>
+                                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                        <real key="value" value="14"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="closeButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="354-uj-31Y"/>
+                                                    <action selector="closeButtonClicked:" destination="qeF-95-cvL" eventType="touchUpInside" id="asC-Wb-RAA"/>
+                                                </connections>
+                                            </button>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3bO-7l-Qyh">
+                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <color key="backgroundColor" name="Main Background Color"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="60" id="9s1-pQ-TKT" customClass="UICategoryTableViewCell" customModule="MoneyM" customModuleProvider="target">
+                                        <rect key="frame" x="16" y="49.5" width="343" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9s1-pQ-TKT" id="z2b-sm-7we">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wTQ-lb-jn6">
+                                                    <rect key="frame" x="16" y="10" width="40" height="40"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRs-nO-Xk9">
+                                                            <rect key="frame" x="16.5" y="2" width="7.5" height="36"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" name="Table View Cell Background"/>
+                                                    <constraints>
+                                                        <constraint firstItem="FRs-nO-Xk9" firstAttribute="centerY" secondItem="wTQ-lb-jn6" secondAttribute="centerY" id="7zZ-DB-E0x"/>
+                                                        <constraint firstItem="FRs-nO-Xk9" firstAttribute="centerX" secondItem="wTQ-lb-jn6" secondAttribute="centerX" id="TvJ-E7-ix3"/>
+                                                        <constraint firstAttribute="width" constant="40" id="cXN-un-BX9"/>
+                                                        <constraint firstAttribute="height" constant="40" id="ylp-dE-1Vt"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
+                                                            <real key="value" value="20"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqf-qE-ROm">
+                                                    <rect key="frame" x="72" y="19" width="74" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wTQ-lb-jn6" firstAttribute="top" secondItem="z2b-sm-7we" secondAttribute="top" constant="10" id="B4n-Sm-WBz"/>
+                                                <constraint firstAttribute="bottom" secondItem="wTQ-lb-jn6" secondAttribute="bottom" constant="10" id="TqR-pq-JVr"/>
+                                                <constraint firstItem="wTQ-lb-jn6" firstAttribute="leading" secondItem="z2b-sm-7we" secondAttribute="leading" constant="16" id="ZqF-Av-fjZ"/>
+                                                <constraint firstItem="jqf-qE-ROm" firstAttribute="leading" secondItem="wTQ-lb-jn6" secondAttribute="trailing" constant="16" id="amM-6Y-d4Y"/>
+                                                <constraint firstItem="jqf-qE-ROm" firstAttribute="centerY" secondItem="z2b-sm-7we" secondAttribute="centerY" id="uCW-KC-bUg"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="Table View Cell Background"/>
+                                        <connections>
+                                            <outlet property="iconLabel" destination="FRs-nO-Xk9" id="ZJc-fY-65G"/>
+                                            <outlet property="titleLabel" destination="jqf-qE-ROm" id="6J5-d7-R99"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="RVB-Mb-5Vk"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="3bO-7l-Qyh" firstAttribute="top" secondItem="TvD-Uz-Dni" secondAttribute="bottom" id="2Bb-1D-XoG"/>
+                            <constraint firstItem="3bO-7l-Qyh" firstAttribute="leading" secondItem="RVB-Mb-5Vk" secondAttribute="leading" id="8jG-OK-w2A"/>
+                            <constraint firstItem="TvD-Uz-Dni" firstAttribute="leading" secondItem="RVB-Mb-5Vk" secondAttribute="leading" id="FKS-jJ-4WW"/>
+                            <constraint firstItem="TvD-Uz-Dni" firstAttribute="trailing" secondItem="RVB-Mb-5Vk" secondAttribute="trailing" id="J0p-Dp-amV"/>
+                            <constraint firstItem="3bO-7l-Qyh" firstAttribute="bottom" secondItem="RVB-Mb-5Vk" secondAttribute="bottom" id="blm-ao-azw"/>
+                            <constraint firstItem="TvD-Uz-Dni" firstAttribute="top" secondItem="RVB-Mb-5Vk" secondAttribute="top" id="cEV-Al-ABX"/>
+                            <constraint firstItem="3bO-7l-Qyh" firstAttribute="trailing" secondItem="RVB-Mb-5Vk" secondAttribute="trailing" id="jm1-mI-0nF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="categoriesTableView" destination="3bO-7l-Qyh" id="gbf-9T-ymZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jM7-Ok-9US" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1004" y="63.418290854572717"/>
+        </scene>
     </scenes>
     <resources>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="Main Background Color">
             <color red="0.94900000095367432" green="0.94900000095367432" blue="0.96899998188018799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Table View Cell Background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
