--- a/MoneyM/Storyboards/Base.lproj/Main.storyboard
+++ b/MoneyM/Storyboards/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xyB-ES-nvp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xyB-ES-nvp">
     <device id="mac" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -189,7 +189,7 @@
                     <connections>
                         <segue destination="7Lp-BD-6us" kind="relationship" relationship="masterViewController" id="3Zy-Y5-0sX"/>
                         <segue destination="oa9-g4-QNG" kind="relationship" relationship="detailViewController" id="QNX-ai-0Ci"/>
-                        <segue destination="7Lp-BD-6us" kind="relationship" relationship="compactViewController" id="Rcr-Pe-SOY"/>
+                        <segue destination="7Lp-BD-6us" kind="relationship" relationship="compactViewController" id="Bg5-RJ-hzh"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dbs-NR-fDi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
